Discontinue use of excerpt separators in blog posts.

--- a/site/_posts/2019-05-20-velero-1.0-has-arrived.md
+++ b/site/_posts/2019-05-20-velero-1.0-has-arrived.md
@@ -1,14 +1,14 @@
 ---
 title: Velero 1.0 Has Arrived&#58; Delivering Enhanced Stability, Usability and Extensibility Features
 # image: https://placehold.it/200x200
-excerpt_separator: <!--more-->
+excerpt: Just three months after the release of Velero 0.11, the community’s momentum continues with the delivery of the landmark version 1.0 release.
 author_name: Tom Spoonemore
 # author_avatar: https://placehold.it/64x64
 categories: ['velero','release']
 # Tag should match author to drive author pages
 tags: ['Velero Team', 'Tom Spoonemore']
 ---
-Just three months after the release of Velero 0.11, the community’s momentum continues with the delivery of the landmark version 1.0 release. <!--more--> This significant release improves the installation experience, Helm support, the plugin system, and overall stability. We want to thank the community and the team, and acknowledge all of their hard work and amazing contributions to this major milestone.
+Just three months after the release of Velero 0.11, the community’s momentum continues with the delivery of the landmark version 1.0 release. This significant release improves the installation experience, Helm support, the plugin system, and overall stability. We want to thank the community and the team, and acknowledge all of their hard work and amazing contributions to this major milestone.
 
 Data protection is always a chief concern for application owners who want to make sure that they can restore a cluster to a known good state, recover from a crashed cluster, or migrate to a new environment. With Velero 1.0, Kubernetes cluster administrators can feel confident that they have a production-grade backup solution for their cluster resources and applications.
 
