--- a/site/_posts/2020-03-02-Velero-1.3-Voyage-Continues.md
+++ b/site/_posts/2020-03-02-Velero-1.3-Voyage-Continues.md
@@ -1,9 +1,9 @@
 ---
-title: Velero 1.3: Improved CRD Backups/Restores, Multi-Arch Docker Images, and More!
+title: "Velero 1.3: Improved CRD Backups/Restores, Multi-Arch Docker Images, and More!"
 excerpt: Velero 1.3 includes improvements to CRD backups and restores, multi-arch Docker images including support for arm/arm64 and ppc64le, and many other usability and stability enhancements. This release includes significant contributions by community members, and we’re thrilled to be able to partner with you all in continuing to improve Velero.
 author_name: Steve Kriss
 categories: ['velero','release']
-image: TODO
+image: /img/posts/post-1.3.jpg
 # Tag should match author to drive author pages
 tags: ['Velero Team', 'Steve Kriss']
 ---
@@ -26,7 +26,7 @@ With all of these fixes and improvements in place, we hope that the CRD backup a
 
 ## Multi-Arch Docker Images
 
-Thanks to community members [@Prajyot-Parab](https://github.com/Prajyot-Parab) and [@shaneutt](https://github.com/shaneutt), Velero now provides multi-arch container images by using Docker manifest lists.  We are currently publishing images for `linux/amd64`, `linux/arm64`, `linux/arm`, and `linux/ppc64le` in [our Docker repository](https://hub.docker.com/layers/velero/velero/master/images/sha256-d39232206e0b9b2bbd47ee6e10b6770b17064a3f691ed5f174ca176e810abdda?context=explore). TODO UPDATE LINK FOR v1.3
+Thanks to community members [@Prajyot-Parab](https://github.com/Prajyot-Parab) and [@shaneutt](https://github.com/shaneutt), Velero now provides multi-arch container images by using Docker manifest lists.  We are currently publishing images for `linux/amd64`, `linux/arm64`, `linux/arm`, and `linux/ppc64le` in [our Docker repository](https://hub.docker.com/r/velero/velero/tags?page=1&name=v1.3&ordering=last_updated).
 
 Users don’t need to change anything other than updating their version tag - the v1.3 image is `velero/velero:v1.3.0`, and Docker will automatically pull the proper architecture for the host.
 
