--- a/hugo-site/content/posts/2020-05-26-Velero-1.4-Community-Wave.md
+++ b/hugo-site/content/posts/2020-05-26-Velero-1.4-Community-Wave.md
@@ -2,7 +2,7 @@
 title: "Velero 1.4: Introducing Beta CSI Support, Backup Progress Tracking, and Much More!"
 excerpt: Riding a wave of community contributions, Velero 1.4 introduces beta CSI support, improvements to backup progress tracking, and more. A major focus for 1.4 was addressing issues raised by the community, and we are proud to be able to deliver improvements that matter to you.
 author_name: Nolan Brubaker
-url: /blog/Velero-1.4-Community-Wave/
+slug: Velero-1.4-Community-Wave
 aliases: ['/blog/velero-1.4-community-wave/']
 categories: ['velero','release']
 image: /img/posts/post-1.4.jpg
